# enigmalight

./: .gitignore  .travis.yml  README.md  configure.ac  enigma2-plugin-extensions-enigmalight.bb
elight-addons/config_samples/: single-lightpack-example.conf  two-lightpacks-example.conf
elight-addons/wifilight/: wifilight.py
elight-addons/wifilight/philips_test/: hue.py
ipk/: enigma2-plugin-extensions-enigmalight_1.0+git102+b2b7484-r1_mips32el.ipk  enigma2-plugin-extensions-enigmalight_1.0+git108+b86369b-r1_mips32el.ipk  enigma2-plugin-extensions-enigmalight_1.0+git74+48c94a9-r10_mips32el.ipk  enigma2-plugin-extensions-enigmalight_1.0+git81+ff7c540-r10_mips32el.ipk  enigma2-plugin-extensions-enigmalight_1.0+git91+29bbdd2-r1_mips32el.ipk  enigma2-plugin-extensions-enigmalight_1.0+git98+8fd5bcd-r1_mips32el.ipk
python/plugin/EnigmaLight/: EL_About.py  EL_Adjust.py  EL_Check.py  EL_ConfigEditor.py  EL_Control.py  EL_Help.py  EL_Helper_MovingLabel.py  EL_Helper_Singleton.py  EL_HttpServer.py  EL_MainMenu.py  EL_Moodlamp.py  EL_PathSelector.py  EL_Settings.py  EL_Socket.py  EL_ThreadHelper.py  EL_Timer.py  EL_Tuning.py  EL_ViewFactory.py  __common__.py  __init__.py  __plugin__.py  keymap.xml  plugin.py
python/plugin/EnigmaLight/locale/: EnigmaLight.pot
python/plugin/EnigmaLight/locale/fr/LC_MESSAGES/: EnigmaLight.po
python/plugin/EnigmaLight/locale/ru/LC_MESSAGES/: EnigmaLight.po
python/plugin/EnigmaLight/remote/: ajax.py  api.py  base.py  control.py  root.py
python/plugin/EnigmaLight/remote/models/: control.py  info.py
python/plugin/EnigmaLight/remote/public/js/: enigmalight.js
python/plugin/EnigmaLight/remote/views/: about.tmpl  controller.tmpl
python/plugin/EnigmaLight/skins/default/: skin-fullhd.xml  skin-hd.xml
src/: Configuration.cpp  FlagManager.cpp  Main.cpp  MainLoop.cpp  Makefile.am  elightprefix
src/Device/: DeviceIbelight.cpp  DeviceLTBL.cpp  DeviceLightpack.cpp
src/Effects/: Effects.cpp  Moodlamp.cpp  RGBTest.cpp  Rainbow.cpp  Static.cpp
src/ElightPrefix/: Prefix.c
src/ElightTalk/: Main.cpp
src/Grabber/: FrameGrabber.cpp  Grabber.cpp
src/Include/: FlagManager.h
src/Include/StbDetection/: StbDetection.h
src/Include/Util/: TcpSocket.h  Thread.h  Timer.h
src/Lights/: EnigmaLightOptions.cpp
src/StbDetection/: StbDetection.cpp
src/Util/: Bitmap.cpp  BlackbarDetection.cpp  ColorTransform.cpp  Log.cpp  MessageQueue.cpp  Misc.cpp  Thread.cpp
